# simple-vote-app

./: README.md  README.rst  main.py  pyproject.toml
ddd_votes/: main.py  vote.py  vote_repository.py
ddd_votes/adapter/: inmemory_vote_repository.py
ddd_votes/domain/: vote.py  vote_repository.py
tests/: conftest.py  test_vote.py  test_vote_repository.py
tests/adapter/: test_inmemory_vote_repository.py
tests/api/: test_api_votes.py
tests/domain/: test_vote.py
tests/fixtures/: client.py
