[tool.poetry]
name = "ddd_votes"
version = "0.1.0"
description = ""
authors = ["Viswas Vuppala <viswas@steelbasis.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^3.0.0"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
